<resources>
    <string name="app_name">WOW</string>
    <string name="map_api_key">AIzaSyArjmbYWTWZhDFFtPOLRLKYwjtBDkOEGrY</string>
    <string name="map_api_key2">AIzaSyArjmbYWTWZhDFFtPOLRLKYwjtBDkOEGrY</string>
    <string name="notifications">Notifications</string>
    <string name="si_su">Please Sign in or sign up .</string>
    <string name="ok">Ok</string>
    <string name="sign_in">Sign In</string>
    <string name="back">Back</string>
    <string name="sign_in_btn">Sign In</string>
    <string name="new_account">New Account</string>
    <string name="field_req">Field required</string>
    <string name="inv_phone">Invalid phone</string>
    <string name="signning_in">Signing In...</string>
    <string name="full_name">Full name</string>
    <string name="phone">Phone</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="wait">Wait...</string>
    <string name="sign_up">Sign Up</string>
    <string name="perm_image_denied">Permission denied</string>
    <string name="upload_personal_photo">Upload personal photo</string>
    <string name="rsa">SR</string>
    <string name="home">Home</string>
    <string name="offers">Offers</string>
    <string name="my_order">My orders</string>
    <string name="fav">Favourite</string>
    <string name="me">Me</string>
    <string name="cancel">Cancel</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="update">Update</string>
    <string name="contact_us">Contact us</string>
    <string name="delete">Delete</string>
    <string name="update_password">Update password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="update_phone">Update phone</string>
    <string name="succ">Success</string>
    <string name="failed">Failed try again later</string>
    <string name="phone_number_not_exists">Phone number not exists</string>
    <string name="sgin_out">Signing out...</string>
    <string name="sign_out">Sign Out</string>
    <string name="order_sent_successfully">Order sent successfully!</string>
    <string name="updating_phone">Updating phone number...</string>
    <string name="incorrect_old_password">incorrect old password</string>
    <string name="sign_up_with_your_phone">Sign up with your phone</string>
    <string name="skip">Skip</string>
    <string name="you_are_just_one_step_away">You are just one step away...</string>
    <string name="never_share_phone_number">We will never share or sell your phone number</string>
    <string name="your_privacy_guaranteed">Your privacy is 100% guaranteed</string>
    <string name="by_using_this_app_you_agree_to">By using this app you agree to</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="stores">Stores</string>
    <string name="my_orders">My Orders</string>
    <string name="profile">Profile</string>
    <string name="new_order">New</string>
    <string name="current">Current</string>
    <string name="previous">Previous</string>
    <string name="personal_information">Personal information</string>
    <string name="_500_500_pixel">500 * 500 pixel (optional)</string>
    <string name="country">Country</string>
    <string name="pers_photo_req">Personal photo required</string>
    <string name="inv_email">Invalid email</string>
    <string name="inc_img_path">incorrect image path</string>
    <string name="allow_mrsoolk_to_access_gps">Allow WOW To Access GPS</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="rate">Rate</string>
    <string name="search_for_stores">Search for stores...</string>
    <string name="something">Something went haywire try again later</string>
    <string name="fetching_your_location">Fetching your location....</string>
    <string name="there_are_no_nearby_stores">There are no nearby stores</string>
    <string name="active">Open</string>
    <string name="inactive">Closed</string>
    <string name="im_a_courier">I\'m a Courier</string>
    <string name="courier_in">Courier in</string>
    <string name="state">State</string>
    <string name="away">Km away</string>
    <string name="shop_info">Shop Info</string>
    <string name="pending_order">Pending Orders</string>
    <string name="view_in_map">View in map</string>
    <string name="km">Km</string>
    <string name="nearby">nearby</string>
    <string name="florist">florist</string>
    <string name="bakery">bakery</string>
    <string name="supermarket">supermarket</string>
    <string name="cafe">cafe</string>
    <string name="restaurant">restaurant</string>
    <string name="store">store</string>
    <string name="recent">Recent</string>
    <string name="near_me">Near me</string>
    <string name="today_s">Today\'s</string>
    <string name="all_day">All day</string>
    <string name="account_balance">Account Balance</string>
    <string name="user_feedback">User Feedback</string>
    <string name="logout">Logout</string>
    <string name="my_field_complains">Make a complaint</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="language_settings">Language Settings</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_this_app">Rate this App</string>
    <string name="help">Help</string>
    <string name="about_tour">About Tour</string>
    <string name="settings">Settings</string>
    <string name="orders_count">Orders Count</string>
    <string name="order_now">Order Now</string>
    <string name="delivery_location">Delivery Location</string>
    <string name="choose_delivery_location">Choose Delivery Location</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="check_here_to_choose_delivery_time">Check here to choose Delivery Time</string>
    <string name="write_order_details">Write here the details of your order for example i want 1 Cheeseburger,1 Large Fries.Please write also how much is approximate cost of your order.</string>
    <string name="set_location_on_map">Set location on map</string>
    <string name="save_favorite_location">Save Favorite Location</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="save">Save</string>
    <string name="cancel2">Cancel</string>
    <string name="select_time">Select Time</string>
    <string name="select">Select</string>
    <string name="hour1">1 Hour</string>
    <string name="hour2">2 Hour</string>
    <string name="hour3">3 Hour</string>
    <string name="day1">1 Day</string>
    <string name="day2">2 Day</string>
    <string name="day3">3 Day</string>
    <string name="search_for_address">Search for Address...</string>
    <string name="floor_apartment_no_house_no">Floor/Apartment No/House No</string>
    <string name="select_language">Select Language</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="general_settings">General Settings</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="select_a_picture_to_upload">Select a picture to upload</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="inc_em_phone">Incorrect email or phone</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="no_courier_available">No courier available near you</string>
    <string name="couriers">Couriers</string>
    <string name="go_to_order">Follow order</string>
    <string name="order_sent_successfully_order_number_is">Order sent successfully order number is</string>
    <string name="national_number">National number-Residency number</string>
    <string name="address">Address</string>
    <string name="identity_card_image">Identity card image</string>
    <string name="license_image">License image</string>
    <string name="choose_identity_card_image">Choose identity card image</string>
    <string name="choose_license_image">Choose license image</string>
    <string name="suc">Success !</string>
    <string name="succ_be_courier">You have been successfully be a Courier. You can now receive orders from clients</string>
    <string name="serv_aval_client">This service is available to clients</string>
    <string name="already_courier">You are already a courier.</string>
    <string name="order_number">Order number</string>
    <string name="no_waiting_orders">No waiting orders</string>
    <string name="order_state">Order state</string>
    <string name="not_approved">Not approved</string>
    <string name="pending">Pending</string>
    <string name="done">Done</string>
    <string name="just_now">just now</string>
    <string name="a_minute_ago">a minute ago</string>
    <string name="min">MIN</string>
    <string name="an_hour_ago">an hour ago</string>
    <string name="hs">Hs</string>
    <string name="yesterday">yesterday</string>
    <string name="day">D</string>
    <string name="no_orders_to_display">No orders to display</string>
    <string name="show_details">Show details</string>
    <string name="no_notifications_to_display">No notifications to display</string>
    <string name="order_accepted">Order accepted</string>
    <string name="accepted">Accepted</string>
    <string name="order_refused">Order refused</string>
    <string name="refused">Refused</string>
    <string name="accept">Accept</string>
    <string name="refuse">Refuse</string>
    <string name="order_details">Order details</string>
    <string name="delivery_cost">Delivery cost</string>
    <string name="delegate_accept_order">Courier accept order</string>
    <string name="collecting_order">Collecting order</string>
    <string name="delegate_collecting_order">Courier collecting order</string>
    <string name="order_collected">Order collected</string>
    <string name="delegate_collected_order">Courier collected order</string>
    <string name="delivering_order">Delivering order</string>
    <string name="delivering_order_to_your_destination">delivering order to your destination</string>
    <string name="order_delivered_successfully">Order delivered successfully</string>
    <string name="we_are_pleased_to_serve_you">We are pleased to serve you</string>
    <string name="courier">Courier</string>
    <string name="no_comments_to_display">No comments to display</string>
    <string name="update_order_state">Update order state</string>
    <string name="client_name">Client name</string>
    <string name="show_address_on_map">Show address on map</string>
    <string name="collect_order">Collect order</string>
    <string name="collected_order">Collected order</string>
    <string name="deliver_order">Deliver order</string>
    <string name="send_order_to_another_courier">Send order to another courier ?</string>
    <string name="how_to_become_a_courier_in_marsoolk">How to become a Courier in WOW ?</string>
    <string name="click_here">Click here</string>
    <string name="doc_form_txt">Before filling in the form, please see the following pictures. You can document your account and get the blue badge on your profile. Authentication is used to prove the identity of the conductors so that they are dealt with safely!</string>
    <string name="bank_name">Bank Name</string>
    <string name="tone">Tune</string>
    <string name="default_tone">Default</string>
    <string name="tune_1">Tune 1</string>
    <string name="tune_2">Tune 2</string>
    <string name="tune_3">Tune 3</string>
    <string name="account_iban">Account IBAN</string>
    <string name="account_number">Account Number</string>
    <string name="account_name">Account Name</string>
</resources>