<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray1"

    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="18sp"
        android:text="@string/tone"
        android:background="@color/white"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="3dp"
        >
        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/default_tone"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:button="@drawable/rb_bg"
            android:checked="true"
            android:background="@color/white"
            />
        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/tune_1"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:button="@drawable/rb_bg"



            />

        <RadioButton
            android:id="@+id/rb3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/tune_2"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:button="@drawable/rb_bg"



            />
        <RadioButton
            android:id="@+id/rb4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/tune_3"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:button="@drawable/rb_bg"



            />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        >
        <Button
            android:id="@+id/btn_select"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/select"
            android:textColor="@color/colorPrimary"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp" />
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/cancel"
            android:textColor="@color/gray4"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            />
    </LinearLayout>
</LinearLayout>