<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"

    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:textSize="15sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:text="@string/save_favorite_location"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"

        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray2"
        />

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textSize="13sp"
        android:textColor="@color/gray4"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="15dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:text="@string/name"
        />

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColorHint="@color/gray4"
        android:textColor="@color/black"
        android:hint="@string/enter_name"
        android:singleLine="true"
        android:scrollHorizontally="true"
        android:textSize="13sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        >
        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@color/transparent"
            android:textColor="@color/colorPrimary"
            android:text="@string/save"
            />
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@color/transparent"
            android:textColor="@color/gray4"
            android:text="@string/cancel2"
            />
    </LinearLayout>
</LinearLayout>