<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="3dp"
    android:layout_marginBottom="2dp"
    app:cardCornerRadius="5dp"
    app:cardBackgroundColor="@color/white"
    app:contentPadding="5dp"
    app:cardElevation="3dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/bank_name"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tv_bank_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gray5"
            android:textSize="14sp"
            android:text="@string/bank_name"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/account_name"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            />
        <TextView
            android:id="@+id/tv_account_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gray5"
            android:textSize="14sp"
            android:text="@string/bank_name"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/account_iban"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            />
        <TextView
            android:id="@+id/tv_account_iban"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gray5"
            android:textSize="14sp"
            android:text="@string/bank_name"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/account_number"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            />
        <TextView
            android:id="@+id/tv_account_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gray5"
            android:textSize="14sp"
            android:text="@string/bank_name"
            android:layout_marginTop="5dp"
            />

    </LinearLayout>
</androidx.cardview.widget.CardView>