<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/select_time"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="@color/white"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray4"
        android:layout_marginBottom="20dp"
        />
    <NumberPicker
        android:id="@+id/numberPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:divider="@color/gray4"

        >

    </NumberPicker>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray4"
        android:layout_marginTop="15dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:gravity="center_vertical"
        >
        <Button
            android:id="@+id/btn_select"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:text="@string/select"
            android:background="@color/transparent"
            />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="@color/gray4"
            android:textSize="15sp"
            android:text="@string/cancel2"
            android:background="@color/transparent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />
    </LinearLayout>

</LinearLayout>