<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_gps"
        android:padding="10dp"
        android:tint="@color/colorPrimary"
        />
    <TextView
        android:id="@+id/tv_note"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/image"
        app:layout_constraintTop_toTopOf="@id/image"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="80dp"
        android:text="@string/allow_mrsoolk_to_access_gps"
        tools:ignore="RtlCompat" />
    <Button
        android:id="@+id/btn_allow"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/tv_note"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:background="@color/transparent"
        android:text="@string/allow"
        tools:ignore="RtlCompat"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"


        />

    <Button
        android:id="@+id/btn_deny"

        android:layout_width="wrap_content"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/tv_note"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toEndOf="@id/btn_allow"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:background="@color/transparent"
        android:text="@string/deny"
        android:layout_marginStart="30dp"
        tools:ignore="RtlCompat"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>