<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/ll_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        >
        <ImageView
            android:id="@+id/arrow"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_left_arrow"
            android:padding="10dp"
            android:tint="@color/white"
            android:clickable="false"
            android:longClickable="false"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical"
            android:clickable="false"
            android:longClickable="false"
            />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:fillViewport="true"
        >
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textStyle="bold"
                android:text="@string/how_to_become_a_courier_in_marsoolk"

                />
            <TextView
                android:id="@+id/tv_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:layout_constraintTop_toBottomOf="@id/title"
                android:layout_marginTop="25dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="@string/doc_form_txt"
                />
            <Button
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/tv_content"
                app:layout_constraintTop_toBottomOf="@id/tv_content"
                android:layout_marginTop="25sp"
                android:background="@drawable/btn_code_confirm"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:text="@string/click_here"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"

                />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</LinearLayout>